--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -31,7 +31,7 @@
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
           {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
-                  <a href="{% url 'account_logout' %}" class="dropdown-item">Product Management</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-archive"></i> Product Management</a>
               {% endif %}
               <a href="" class="dropdown-item">Profile</a>
               <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
