updated the background color to navbar, dropdowns and body

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -33,7 +33,7 @@
     <div class="container hero-container">
         <div class="row">
             <div class="col-12 my-auto mx-auto">
-                <h1 class="display-4 logo-font text-white">
+                <h1 class="display-4 logo-font text-black">
                     Update Your Skateboarding Equipment<span class="dot">.</span>
                 </h1>
                 <div class="my-5">
