--- a/templates/base.html
+++ b/templates/base.html
@@ -170,10 +170,16 @@
     {% endblock %}
 
     <footer>
-        <div class="row container-fluid mt-4">
-            <div class="col">
-                <h1 class="text-center">Footer Content</h1>
+        <div class="row container-fluid footer-top mt-4 mx-0">
+            <div class="col-12">
+                <h4 class="text-left pt-2">Footer Content</h4>
             </div>
+        </div>
+
+        <div class="row container-fluid footer-bottom mt-4 mx-0">
+            <div class="col-12 col-md-4">Customer Service</div>
+            <div class="col-12 col-md-4">Company</div>
+            <div class="col-12 col-md-4">Contact Us</div>
         </div>
     </footer>
 
