--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -31,13 +31,13 @@
       <div class="dropdown-menu border-0" aria-labelledby="user-options">
           {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
-                  <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-archive"></i> Product Management</a>
+                  <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="far fa-clipboard"></i> Product Management</a>
               {% endif %}
-              <a href="" class="dropdown-item">Profile</a>
-              <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
+              <a href="" class="dropdown-item"><i class="fas fa-portrait"></i> Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item"><i class="fas fa-sign-out-alt"></i> Sign Out</a>
           {% else %}
-              <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-user"></i> Register</a>
-              <a href="{% url 'account_login' %}" class="dropdown-item"><i class="fas fa-unlock-alt"></i> Sign In</a>
+              <a href="{% url 'account_signup' %}" class="dropdown-item"><i class="fas fa-edit"></i> Register</a>
+              <a href="{% url 'account_login' %}" class="dropdown-item"><i class="fas fa-sign-in-alt"></i></i> Sign In</a>
           {% endif %}
       </div>
   </li>
