--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container mt-5 pt-5">
+<div class="shopping-bag-continer container mt-5 pt-5">
     <div class="row">
         <div class="col">
             <hr>
