--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid mt-5 pt-5">
+<div class="details-container container-fluid mt-5 pt-5">
     <div class="row">
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <!-- Product Image -->
