--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,11 @@
 
 <body>
     <header class="container-fluid fixed-top bg-light">
+        <div id="delivery-banner" class="row text-center">
+            <div class="col">
+                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
+            </div>            
+        </div>
         <div id="topnav" class="row d-none d-lg-flex">
             <div class="col-12 col-md-2 col-lg-3 text-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand">
@@ -130,6 +135,7 @@
                 </ul>
             </div>
         </div>
+        <hr class="hr-navbar">
         <div id="mobile-nav" class="row d-block d-lg-none">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -139,11 +145,6 @@
             {% include 'includes/mobile-top-header.html' %}
             {% include 'includes/main-nav.html' %}
         </nav>
-    </div>
-    <div id="delivery-banner" class="row text-center">
-        <div class="col">
-            <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
-        </div>            
     </div>
     </header>
 
