--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'products/css/products.css' %}">
+{% endblock %}
+
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -29,8 +33,8 @@
     <div class="row">
         <div class="product-container col-12">
             <div class="row mt-1 mb-2">
-                <div class="col-12 my-auto d-flex justify-content-center">
-                    <div class="sort-select-wrapper w-50">
+                <div class="col-12 my-auto mx-auto d-flex justify-content-center">
+                    <div class="sort-select-wrapper">
                         <select id="sort-selector" class="text-center custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                             <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                             <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
@@ -47,7 +51,7 @@
                 <div class="col-12">
                     <p class="text-muted mt-3 text-center text-md-left">
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
-                            <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
+                            <span class="small"><a href="{% url 'products' %}">All Produts</a> | </span>
                         {% endif %}
                         {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                     </p>
@@ -82,11 +86,6 @@
                                             {{ product.category.friendly_name }}
                                         </a>
                                         {% endif %}
-                                        <!-- {% if product.rating %}
-                                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                                        {% else %}
-                                            <small class="text-muted">No Rating</small>
-                                        {% endif %} -->
                                     </div>
                                 </div>
                             </div>
