--- a/static/css/base.css
+++ b/static/css/base.css
@@ -40,11 +40,12 @@ footer {
 
 #topnav {
     height: 6rem;
+    border-bottom: 1px solid #222;
 }
 
 a.nav-link {
     font-size: .7rem;
-    font-weight: 700;
+    font-weight: 800;
     color: black!important;
 }
 
@@ -113,14 +114,7 @@ a.nav-link.main-logo-link.navbar-brand {
 
 li.nav-item {
     line-height: 1rem;
-}   
-
-.hr-navbar {
-    width: 50%;
-    margin: auto;
-    margin-bottom: 0!important;
-    margin-top: 0!important;
-}
+} 
 
 /* ---------------------- CONTAINERS ---------------------- */
 
@@ -129,7 +123,6 @@ li.nav-item {
 } 
 
 .shopping-bag-continer,
-.product-container,
 .details-container  {
     min-height: 80vh;
 }
@@ -144,14 +137,23 @@ li.nav-item {
     background-color: #333;
 }
 
+.overlay {
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: #fff;
+    z-index: -1;
+}
+
 
 /* ---------------------- HOVER ---------------------- */
 
 a.nav-link:hover {
-    /* border: 2px solid black;
-    border-radius: 25px; */
     color: #764c87!important;
     transition: 4ms ease-in-out;
+    text-decoration: underline;
 }
 
 .navbar-brand h2:hover {
@@ -379,6 +381,76 @@ a#shopnow {
     color: #fff;
 }
 
+/* ---------------------- PRODUCTS.HTML ---------------------- */
+
+.product-container {
+    min-height: 80vh;
+}
+
+.product-header h1 {
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.img-fluid {
+    border: #222 solid 1px;
+}
+
+.img-container {
+    padding: 1rem;
+}
+
+.img-card {
+    border: #222 solid 1px;
+}
+
+.card-body p {
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.card-footer {
+    background-color: #fff;
+}
+
+.card-footer p {
+    font-size: small;
+    font-weight: 700;
+}
+
+.card-footer a {
+    color: #222831;
+    text-decoration: none;
+}
+
+.current-category {
+    text-decoration: none;
+    color: #222831;
+    font-weight: 700;
+    font-size: 4rem;
+    text-transform: capitalize;
+}
+.current-category:hover,
+.small a:hover {
+    color: #764c87!important;
+    transition: 4ms ease-in-out;
+}
+
+.custom-select {
+    padding: .5rem;
+}
+
+.small a {
+    color: #222831;
+}
+
+@media (min-width: 992px) {
+    .product-header.col.text-center {
+        padding-top: 5rem;
+    }
+}
+
+
 
 /* ---------------------- LOGOUT.HTML ---------------------- */
 
@@ -402,76 +474,6 @@ a#shopnow {
     background: #492857;
     color: #fff;
 }
-
-
-/* ---------------------- PRODUCTS.HTML ---------------------- */
-
-
-.product-header h1 {
-    font-size: 4rem;
-    font-weight: 700;
-}
-
-.product-header.col.text-center {
-    padding-top: 5rem;
-}
-
-.overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: #fff;
-    z-index: -1;
-}
-
-.img-fluid {
-    border: #222 solid 1px;
-}
-
-.img-container {
-    padding: 1rem;
-}
-
-.img-card {
-    border: #222 solid 1px;
-}
-
-.card-body p {
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-.card-footer {
-    background-color: #fff;
-}
-.card-footer p {
-    font-size: small;
-    font-weight: 700;
-}
-
-.card-footer a {
-    color: #222831;
-    text-decoration: none;
-}
-
-.current-category {
-    text-decoration: none;
-    color: #222831;
-    font-weight: 700;
-    font-size: 4rem;
-    text-transform: capitalize;
-}
-.current-category:hover {
-    color: #764c87!important;
-    transition: 4ms ease-in-out;
-}
-
-.custom-select {
-    padding: .5rem;
-}
-
 
 /* ---------------------- PRODUCT_DETAIL.HTML ---------------------- */
 
