--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,9 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_css %}
+    <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -12,12 +16,17 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="/media/rail.jpg" alt="First slide">
+        <div class="carousel-caption">
+            <h5> Update Your Skateboarding Equipment<span class="dot">.</span></h5>
+            <p>...</p>
+          </div>
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="/media/board.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Third slide">
+        <div class="carousel-caption">
+            <h5>...</h5>
+            <p>...</p>
+          </div>
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -28,7 +37,7 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div> -->
+  </div>
 
     <div class="container hero-container">
         <div class="row">
