--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="shopping-bag-continer container mt-5 pt-5">
+<div class="shopping-bag-continer container mt-5">
     <div class="row">
         <div class="col">
             <hr>
@@ -102,13 +102,13 @@
                             </tr>
                             <tr>
                                 <td colspan="5" class="text-right">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">
                                         <span class="icon">
                                             <i class="fas fa-chevron-left"></i>
                                         </span>
                                         <span class="text-uppercase">Keep Shopping</span>
                                     </a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+                                    <a href="{% url 'checkout' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">
                                         <span class="text-uppercase">Secure Checkout</span>
                                         <span class="icon">
                                             <i class="fas fa-lock"></i>
@@ -121,7 +121,7 @@
 
             {% else %}
                 <p class="lead mb-5">Your bag is empty.</p>
-                <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+                <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">
                     <span class="icon">
                         <i class="fas fa-chevron-left"></i>
                     </span>
