--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<!-- <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -37,14 +37,17 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-  </div>
+  </div> -->
 
     <div class="container hero-container">
         <div class="row">
-            <div class="col-12 my-auto mx-auto">
-                <h1 class="display-4 logo-font text-black">
-                    Update Your Skateboarding Equipment<span class="dot">.</span>
+            <div class="col-12 col-md-8 offset-md-2 my-auto mx-auto text-center">
+                <h1 class="display-4 logo-font text-black uppercase">
+                   update your equipment<span class="dot">.</span>
                 </h1>
+                <p>
+                    Get the latest skateboarding gear to your setup here!
+                </p>
                 <div class="my-5">
                     <h4>
                         <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-4 text-uppercase py-3">Shop Now</a>
