--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -33,13 +33,8 @@
                 <!-- Producat name/price -->
                 <h1 class="mb-0">{{ product.name }}</h1>
                 <p class="mb-0 text-left">${{ product.price }}</p>
-                <!-- {% if product.rating %}
-                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                {% else %}
-                    <small class="text-muted">No Rating</small>
-                {% endif %} -->
                 <!-- Accordian for product information -->
-                <div class="accordion accordion-flush pt-2" id="accordionFlushExample">
+                <div class="accordion accordion-flush mt-2" id="accordionFlushExample">
                     <div class="accordion-item">
                         <h1 class="accordion-header" id="flush-headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -50,6 +45,11 @@
                             <div class="accordion-body">
                                 {{ product.description }} <br>
                                 <small class="text-muted"> Product SKU: {{ product.sku }}</small> <br>
+                                {% if product.rating %}
+                                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                            {% else %}
+                                <small class="text-muted">No Rating</small>
+                            {% endif %}<br>
                                 {% if product.category %}
                                     <a href="{% url 'products' %}?category={{ product.category.name }}">
                                         {{ product.category.friendly_name }}
@@ -81,7 +81,7 @@
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0" 
+                                        <button class="decrement-qty btn rounded-4" 
                                             data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-minus"></i>
@@ -92,7 +92,7 @@
                                             name="quantity" value="1" min="1" max="99" 
                                             data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
                                     <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0"
+                                        <button class="increment-qty btn rounded-4"
                                             data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
                                             <span class="icon">
                                                 <i class="fas fa-plus"></i>
@@ -104,14 +104,14 @@
                         </div>
                         <div class="col{% if s %}-12 mt-2{% endif %}">
                             <!-- Keep shoping button -->
-                            <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
+                            <a href="{% url 'products' %}" class="shop-now-button btn btn-sm rounded-4 text-uppercase py-3 mt-5 text-white">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
                                 </span>
                                 <span class="text-uppercase">Keep Shopping</span>
                             </a>
                             <!-- Add to bag button -->
-                            <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5" value="Add to Bag">
+                            <input type="submit" class="add-button btn btn-sm rounded-4 text-uppercase py-3 mt-5" value="Add to Bag">
                         </div>
                         <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         {% endwith %}
