--- a/static/css/base.css
+++ b/static/css/base.css
@@ -584,6 +584,11 @@ a#shopnow {
     height: 2px;
 }
 
+.toast button {
+    background: #764c87;
+    float: right;
+}
+
 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
     width: 0; 
