worked on layout for shopping bag, added loading overlay

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -567,6 +567,10 @@ a#shopnow {
     padding-top: 7rem;
 }
 
+td.pb-3.align-middle.qty {
+    padding-top: 30px;
+}
+
 /* ------------------------------- bootstrap toasts */
 
 .message-container {
