--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -27,29 +27,30 @@
             <div class="table-responsive rounded">
                 <table class="table table-sm table-borderless">
                     <thead class="text-black">
-                        <tr>
+                        <tr class="text-center">
                             <th scope="col">Product Info</th>
                             <th scope="col"></th>
                             <th scope="col">Price</th>
                             <th scope="col">Qty</th>
                             <th scope="col">Subtotal</th>
+                            <th scope="col"></th>
                         </tr>
                     </thead>
 
                     {% for item in bag_items %}
-                                <tr>
-                                    <td class="p-3 w-25">
+                                <tr class="text-center">
+                                    <td class="pb-3 w-25">
                                         <img class="img-fluid rounded" src="{{ item.product.image.url }}">
                                     </td>
-                                    <td class="py-3">
+                                    <td class="pb-3 align-middle">
                                         <p class="my-0"><strong>{{ item.product.name }}</strong></p>
                                         <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                                         <p class="my-0 small text-muted">SKU: {{ item.product.sku|upper }}</p>
                                     </td>
-                                    <td class="py-3">
+                                    <td class="pb-3 align-middle">
                                         <p class="my-0">${{ item.product.price }}</p>
                                     </td>
-                                    <td class="py-3 w-25">
+                                    <td class="pb-3 align-middle qty">
                                         <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                             {% csrf_token %}
                                             <div class="form-group">
@@ -81,10 +82,14 @@
                                             </div>
                                         </form>
                                         <a class="update-link"><small>Update</small></a>
-                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                                       
                                     </td>
-                                    <td class="py-3">
+                                    
+                                    <td class="pb-3 align-middle">
                                         <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                    </td>
+                                    <td class="pb-3 align-middle">
+                                        <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small><i class="far fa-trash-alt"></i></small></a>
                                     </td>
                                 </tr>
                             {% endfor %}
