--- a/static/css/base.css
+++ b/static/css/base.css
@@ -477,27 +477,38 @@ a#shopnow {
     }
 }
 
-/* ---------------------- LOGOUT.HTML ---------------------- */
+/* ---------------------- ACCOUNTS ---------------------- */
 
-.row.signout-container {
-    color: #fff;
-    min-height: 70vh;
+
+.account-header {
     margin-top: 10rem;
-    text-align: center;
 }
 
-.sign-out-button {
-    background: #764c87;
-    color: #fff;
-    min-width: 200px;
-    font-weight: 700;
+.account-container {
+   min-height: 60vh;
 }
 
-.sign-out-button:hover,
-.sign-out-button:active,
-.sign-out-button:focus {
-    background: #492857;
-    color: #fff;
+.account-container .form-control {
+    margin-bottom: 1rem;
+}
+
+.account-container p {
+    margin-top: 1rem;
+}
+
+.account-container p a {
+    color: #222831;
+}
+
+.account-container p a:hover,
+.account-container p a:active,
+.account-container p a:focus {
+    color: #764c87!important;
+}
+
+.account-container button {
+    margin-top: 1rem;
+    width: 100%;
 }
 
 /* ---------------------- PRODUCT_DETAILS.HTML ---------------------- */
@@ -518,14 +529,14 @@ a#shopnow {
 
 .increment-qty,
 .decrement-qty {
-    background: #222;
-    color: #fff;
+    background: #fff;
+    color: #222;
 }
 
 .increment-qty:hover,
 .decrement-qty:hover {
-    background: #764c87;
-    color: #fff;
+    background: #EEEEEE;
+    color: #222;
 }
 
 .accordion {
@@ -554,7 +565,11 @@ a#shopnow {
 
 .accordion-button:after {
     background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23222'><path fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/></svg>") !important;
-  }
+}
+
+input#id_qty_25 {
+    border: 0;
+}
 
 /* ---------------------- BAG.HTML ---------------------- */
 
@@ -569,6 +584,14 @@ a#shopnow {
 
 td.pb-3.align-middle.qty {
     padding-top: 30px;
+}
+
+.shopping-bag-continer .form-control {
+    text-align: center;
+}
+
+input#id_qty_2 {
+    border: 0;
 }
 
 /* ------------------------------- bootstrap toasts */
