--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -5,17 +5,29 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+<div class="account-header container">
+  <div class="row">
+    <div class="col-12">
+      <h1 class="text-center">{% trans "Sign Up" %}</h1>
+    </div>
+  </div>
+</div>
+<div class="row account-container">
+  <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+      <div class="text-center">
+        <button class="add-button btn btn-md roundend-4" type="submit">{% trans "Sign Up" %}</button>
+      </div>
+    </form>
+    
+    <p class="text-center">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">Sign In</a>.{% endblocktrans %}</p>
+  </div>
+</div>
+>
 
 {% endblock %}
