--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -24,7 +24,7 @@
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
       <div class="text-center">
-        <button class="primaryAction add-button btn btn-md roundend-4" type="submit">{% trans "Sign In" %}</button>
+        <button class="primaryAction account-button btn btn-md roundend-4" type="submit">{% trans "Sign In" %}</button>
         <a class="button secondaryAction text-center mt-3" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
       </div>
     </form>
