--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -6,19 +6,30 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
-
-    <h1>{% trans "Password Reset" %}</h1>
+<div class="account-header container">
+    <div class="row">
+      <div class="col-12">
+    <h1 class="text-center">{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-
-    <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
-
+    <p class="text-center">{% trans "Forgotten your password? Enter your e-mail address below, <br>and we'll send you an e-mail allowing you to reset it." %}</p>
+</div>
+</div>
+</div>
+    
+<div class="row account-container">
+    <div class="col-10 offset-1 col-md-6 offset-md-3 col-lg-4 offset-lg-4">
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        {{ form|crispy }}
+        <div class="text-center">
+            <input class="account-button btn btn-md roundend-4 w-100" type="submit" value="{% trans 'Reset My Password' %}" />
+        </div>
     </form>
 
-    <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+    <p class="text-center">{% blocktrans %}Please <a href="">Contact</a> us if you have any trouble resetting your password.{% endblocktrans %}</p>
+</div>
+</div>
 {% endblock %}
+   
