--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -21,7 +21,7 @@
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
       <div class="text-center">
-        <button class="add-button btn btn-md roundend-4" type="submit">{% trans "Sign Up" %}</button>
+        <button class="account-button btn btn-md roundend-4" type="submit">{% trans "Sign Up" %}</button>
       </div>
     </form>
     
