--- a/templates/base.html
+++ b/templates/base.html
@@ -46,15 +46,17 @@
 
 <body>
     <header class="container-fluid fixed-top bg-light">
+        <!-- DELIVERY BANNER -->
         <div id="delivery-banner" class="row text-center">
             <div class="col">
-                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
-            </div>            
+                <h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+            </div>
         </div>
+        <!-- NAVBAR -->
         <div id="topnav" class="row d-none d-lg-flex">
             <div class="col-12 col-md-2 col-lg-3 text-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link navbar-brand">
-                    <h2 class="logo-font text-black my-0">SkateStore<span class="dot">.</span></h2>
+                    <h2 class="logo-font text-black my-0">SkateStore<span class="dot">.</span> <img src="https://img.icons8.com/ios-filled/30/764c87/skateboard.png"/></h2>
                 </a>
             </div>
             <div class="col-12 col-md-6 col-lg-6 my-auto text-center">
@@ -67,7 +69,7 @@
                     </li>
                     <li class="list-inline-item">
                         <a href="{% url 'products' %}?category=wheels" class="nav-link">Wheels</a>
-                    </li>   
+                    </li>
                     <li class="list-inline-item">
                         <a href="{% url 'products' %}?category=bearings" class="nav-link">Bearings</a>
                     </li>
@@ -79,7 +81,7 @@
                     </li>
                 </ul>
             </div>
-
+            <!-- DROPDOWN SEARCHBAR -->
             <div class="col-12 col-lg-3 my-auto text-right search-container">
                 <ul class="list-inline list-unstyled my-0">
                     <li class="list-inline-item">
@@ -104,6 +106,7 @@
                             </form>
                         </div>
                     </li>
+                    <!-- DROPDOWN ACCOUNT  -->
                     <li class="list-inline-item dropdown dd-hover">
                         <a class="nav-link " href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false">
@@ -122,6 +125,7 @@
                             {% endif %}
                         </div>
                     </li>
+                    <!-- BAG -->
                     <li class="list-inline-item">
                         <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
                             href="{% url 'view_bag' %}">
@@ -135,6 +139,7 @@
                 </ul>
             </div>
         </div>
+        <!-- MOBILE NAVBAR -->
         <div id="mobile-nav" class="row d-block d-lg-none">
         <nav class="navbar navbar-expand-lg navbar-light w-100">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
@@ -146,7 +151,7 @@
         </nav>
     </div>
     </header>
-
+    <!-- TOASTS -->
     {% if messages %}
     <div class="message-container">
         {% for message in messages %}
@@ -187,9 +192,12 @@
 
     {% block postloadjs %}
     <script type="text/javascript">
-        $(document).ready(function() {
-            $('.toast').toast('show');
+        // toast
+        $('.toast').toast('show');
 
+        $(document).ready(function() {
+
+            // Dropdown Hover Effect
             $('.dd-hover').hover(
                 function(){
                     $(this).children('.dd-menu').slideDown('fast');
@@ -198,10 +206,8 @@
                     $(this).children('.dd-menu').slideUp('400');
                     }
                 );
-        }); 
+        });
     </script>
     {% endblock %}
-
 </body>
-
 </html>
